        ============= rnumber release 1.17.12 (v1_17_12) on SunOS =============

        ============= rnumber release 1.17.12 (v1_17_12) on Linux =============

        ============= rnumber release 1.17.10 (v1_17_10) on Linux =============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

        ============== rnumber release 1.17.9 (v1_17_9) on SunOS ==============

2003-05-13  Brian Kahne  <bkahne@ibmoto.com>

	* Moved the basic types to a new namespace, rnumber_t, so as not
	to cause namespace pollution.

        ============== rnumber release 1.16.9 (v1_16_9) on SunOS ==============

2003-03-30  Todd Dukes  <tdukes@austin.rr.com>

	*  Fixed GCC_VERSION macro
	*  added commented out perl include path for Redhat 8.0 (swig still doesn't
	   work for this version of Perl, on Redhat 8.0 you have to build with
	   --disable-perl-bindings

2003-03-24  Brian Kahne  <bkahne@ibmoto.com>

	* Modified headers so that they should compile w/o the
	backward-compatibility warning under gcc 3.2.2.

2003-03-18  Brian Kahne  <bkahne@ibmoto.com>

	* The tests of the C bindings have been moved to rnumber/tests so
	that they'll be run even if Bigloo or Perl bindings are not being
	created.

	* Modified RNumber::getSizeWithRadix() so that it will never return
	a size of 0 (which can cause other problems).  Instead, it will return
	a size of _defaultSize;

2003-03-17  Brian Kahne  <bkahne@ibmoto.com>

	* I removed strradix and moved that functionality into str().  The
	format parameter stored bit flags which represents both the radix
	and other stuff, such as whether to print a prefix or not.

2003-03-07  Brian Kahne  <bkahne@ibmoto.com>

	* rnumber is now compatible with gcc 3.2.2.
