@@ -2,7 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/RNumber.C)
 
 RNUMBER_MAJOR_VERSION=1
-RNUMBER_MINOR_VERSION=17
+RNUMBER_MINOR_VERSION=18
 RNUMBER_MICRO_VERSION=12
 RNUMBER_INTERFACE_AGE=0
 RNUMBER_BINARY_AGE=0
